[package]
name = "bootloader"
version = "0.1.0"
authors = ["Jakub Duchniewicz <j.duchniewicz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[profile.release]
codegen-units = 1
debug         = true
incremental   = false
lto           = true
opt-level     = 's'
panic         = "abort"
